<resources>
    <string name="app_name">Ateso Dictionary</string>

    <string name="ateso">Ateso word</string>
    <string name="eng">English word</string>
    <string name="search_hint">Search for any word:</string>

    <!--Menus-->
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>

    <!--About-->
    <string name="about">This app was developed by Oluka Denis. <br />
    Ateso-English Dictionary is a dictionary app that helps people to learn local Ateso words with their respective
    meanings in English language. It is an Education app that can help both students, teachers and all Ugandan
    citizens who have interest in learning Ateso.</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="email">Email: olukadeno@gmail.com</string>
    <string name="phone">Tel: +256 773047940 / +256 703269426</string>


    <string name="listen">Listen</string>
    <string name="engTraslation">English translation:</string>
    <string name="atesoTranslation">Ateso translation:</string>
    <string name="sentence">Sentence:</string>
    <string name="sentenceSample1">This is Ateso sentence</string>
    <string name="sentenceSample2">This is English sentence</string>
</resources>
