<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/teso_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#222"
        android:text="@string/ateso"/>

    <TextView
        android:id="@+id/eng_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/eng"/>

    <TextView
        android:id="@+id/aSentence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:visibility="gone"
        android:text="@string/sentenceSample1"/>

    <TextView
        android:id="@+id/eSentence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:visibility="gone"
        android:text="@string/sentenceSample2"/>
</LinearLayout>